<resources>
    <string name="app_name">Sensoren</string>
    <string name="xyzAcc">0</string>
    <string name="freeFall">Fallzeit: 0s</string>
    <string name="distTextView">Fallstrecke: 0m</string>
    <string name="reset">Neuer Fall</string>
    <string name="accDataView">x: 0
        y: 0
        z: 0
    </string>
    <string name="saveButton">Speichern</string>
    <string name="settingsSensiText">Zeitmessung startet unter: \</string>
    <string name="settings_slow_mode_checkbox">Slow mode</string>
    <string name="options_settings">Einstellungen</string>
    <string name="history_header">Gespeicherte Daten:</string>
    <string name="menu_delete">Daten löschen</string>
    <string name="settings_gAccText">Ortsfaktor:</string>
    <string name="settings_gAcc_hint">z.B. 9.81</string>
    <string name="message_afterDeleteHistory">GELÖSCHT</string>
    <string name="send_to">someone</string>
    <string name="export_data">Datenverlauf exportieren</string>
    <string name="settings_throwModeText">Starthöhe = Endhöhe</string>
</resources>